// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Table /> when passed data renders a table 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <table
      class="table m_b23fa0ef mantine-Table-table"
      style="--table-vertical-spacing: calc(0.4375rem * var(--mantine-scale));"
    >
      <thead
        class="m_b242d975 mantine-Table-thead"
      >
        <tr
          class="m_4e7aa4fd mantine-Table-tr"
          data-with-row-border="true"
        >
          <th
            class="m_4e7aa4f3 mantine-Table-th"
            style="text-align: left; width: 100%;"
          >
            test label
          </th>
        </tr>
      </thead>
      <tbody
        class="m_b2404537 mantine-Table-tbody"
      >
        <tr
          class="m_4e7aa4fd mantine-Table-tr"
          data-with-row-border="true"
          style="height: 3rem; width: 100%;"
        >
          <td
            class="m_4e7aa4ef mantine-Table-td"
            style="width: 100%;"
          >
            test value 1
          </td>
          <td
            class="m_4e7aa4ef mantine-Table-td"
            style="width: 35%;"
          >
            <div
              class="m_4081bf90 mantine-Group-root"
              style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: center; --group-wrap: wrap;"
            >
              <button
                class="mantine-focus-auto mantine-active m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="outline"
                style="--ai-bg: transparent; --ai-hover: var(--mantine-color-blue-outline-hover); --ai-color: var(--mantine-color-blue-outline); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-blue-outline);"
                type="button"
              >
                <span
                  class="m_8d3afb97 mantine-ActionIcon-icon"
                >
                  <svg
                    color="currentColor"
                    fill="none"
                    height="1.5em"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.3632 5.65156L15.8431 4.17157C16.6242 3.39052 17.8905 3.39052 18.6716 4.17157L20.0858 5.58579C20.8668 6.36683 20.8668 7.63316 20.0858 8.41421L18.6058 9.8942M14.3632 5.65156L4.74749 15.2672C4.41542 15.5993 4.21079 16.0376 4.16947 16.5054L3.92738 19.2459C3.87261 19.8659 4.39148 20.3848 5.0115 20.33L7.75191 20.0879C8.21972 20.0466 8.65806 19.8419 8.99013 19.5099L18.6058 9.8942M14.3632 5.65156L18.6058 9.8942"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                class="mantine-focus-auto mantine-active m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="outline"
                id="delete-confirmation"
                style="--ai-bg: transparent; --ai-hover: var(--mantine-color-red-outline-hover); --ai-color: var(--mantine-color-red-outline); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-red-outline);"
                type="button"
              >
                <span
                  class="m_8d3afb97 mantine-ActionIcon-icon"
                >
                  <svg
                    color="currentColor"
                    fill="none"
                    height="1.5em"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="1.5em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 9L18.005 20.3463C17.8369 21.3026 17.0062 22 16.0353 22H7.96474C6.99379 22 6.1631 21.3026 5.99496 20.3463L4 9"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                    <path
                      d="M21 6L15.375 6M3 6L8.625 6M8.625 6V4C8.625 2.89543 9.52043 2 10.625 2H13.375C14.4796 2 15.375 2.89543 15.375 4V6M8.625 6L15.375 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Table /> when passed no data renders a table 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <table
      class="table m_b23fa0ef mantine-Table-table"
      style="--table-vertical-spacing: calc(0.4375rem * var(--mantine-scale));"
    >
      <thead
        class="m_b242d975 mantine-Table-thead"
      >
        <tr
          class="m_4e7aa4fd mantine-Table-tr"
          data-with-row-border="true"
        />
      </thead>
      <tbody
        class="m_b2404537 mantine-Table-tbody"
      />
    </table>
  </div>
</div>
`;
